# tenrust

./: Cargo.toml  README
.github/workflows/: rust.yml
src/: error.rs  index.rs  lib.rs  main.rs  tensor.rs
src/linalg/: mod.rs  singular_value.rs  tensor_multiply.rs
src/matrix_product/: matrix_product_representation.rs  mod.rs
src/tensor/: tensor_tests.rs
src/tensor_train/: mod.rs  tensor_train_representation.rs
