[package]
name = "tenrust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
netlib    = ["ndarray-linalg/netlib"]
openblas  = ["ndarray-linalg/openblas"]
intel-mkl = ["ndarray-linalg/intel-mkl"]

[dependencies]
ndarray = "0.14"
ndarray-linalg = "0.13"
num = "0.4.0"
rand = "0.8.5"
thiserror = "1.0.31"

[dev-dependencies]
ndarray = "0.14"
ndarray-linalg = {version = "0.13", features = ["openblas-system"]}
num = "0.4.0"
rand = "0.8.5"
thiserror = "1.0.31"
